<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beige_background"
    tools:context="spollina.com.coffeebrewassistant_spollina.MainActivity">

    <TextView
        android:id="@+id/waterTextView"
        android:layout_width="144dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:fontFamily="serif"
        android:text="@string/water_used"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/waterAmountSeekBar"
        app:layout_constraintLeft_toLeftOf="@+id/waterAmountSeekBar" />

    <Button
        android:id="@+id/brewButton"
        android:layout_width="288dp"
        android:layout_height="94dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#d1c09e"
        android:fontFamily="serif"
        android:onClick="brewButtonOnClick"
        android:text="@string/brew_button"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/waterAmountTextView"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="serif"
        android:text="10 oz."
        android:textAlignment="textEnd"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/waterTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/coffeeAmountTextView"
        app:layout_constraintRight_toRightOf="@+id/waterAmountSeekBar"
        app:layout_constraintTop_toTopOf="@+id/waterTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/coffeeAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:onClick="switchOnClick"
        android:text="1 2/3 Tbps."
        android:textAlignment="textEnd"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/waterAmountTextView"
        app:layout_constraintTop_toBottomOf="@+id/waterAmountSeekBar" />

    <SeekBar
        android:id="@+id/waterAmountSeekBar"
        android:layout_width="358dp"
        android:layout_height="19dp"
        android:layout_marginBottom="52dp"
        android:max="26"
        android:progress="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <ImageView
        android:id="@+id/frenchPressImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/french_press_empty" />

    <ImageView
        android:id="@+id/frenchPressWater"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/french_press_water" />

    <TextView
        android:id="@+id/brewCountdown"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="4 : 00"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/brewButton"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterAmountSeekBar" />

    <TextView
        android:id="@+id/coffeeTextView"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/coffee_used"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/waterTextView"
        app:layout_constraintTop_toBottomOf="@+id/waterAmountSeekBar" />

    <Space
        android:layout_width="347dp"
        android:layout_height="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/space"
        app:layout_constraintHorizontal_bias="0.514"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/brewButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/brewCountdown"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteY="361dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="351dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="478dp" />

    <ImageView
        android:id="@+id/steamLines"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/steam_lines" />

    <Switch
        android:id="@+id/measurementStyle"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:fontFamily="serif"
        android:onClick="switchOnClick"
        android:showText="true"
        android:splitTrack="true"
        android:textAlignment="center"
        android:textOff="@string/US_measurement"
        android:textOn="@string/metric_measurement"
        android:textSize="14sp"
        android:thumbTint="@color/colorAccent"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/waterAmountTextView"
        app:layout_constraintRight_toRightOf="@+id/waterAmountTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

</android.support.constraint.ConstraintLayout>
